[project]
name = "kfs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "pydantic>=2.11.7",
    "pypdf>=5.8.0",
    "rich>=14.0.0"
]

[project.scripts]
kfs = "kfs.__main__:main"

[dependency-groups]
dev = [
    "pyright>=1.1.403",
    "ruff>=0.12.3"
]
